tests/fail/registering/term typed with a pure sort2.mm0
free sort s;
term f {x:s}:s;
--free means that dummy variables may not be dropped in definitions unless they appear in binding syntax constructors.
 def y (.x:s) : s = $ f x $;
